// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderFactory createMulti can create loaders with multiple columns 1`] = `
[
  {
    "code": "ABC",
    "id": 10,
    "name": "ccc",
  },
]
`;

exports[`LoaderFactory createMulti properly batches queries 1`] = `
[
  [
    {
      "code": "ABC",
      "id": 10,
      "name": "ccc",
    },
  ],
  [
    {
      "code": "DEF",
      "id": 5,
      "name": "AAa",
    },
  ],
]
`;

exports[`LoaderFactory multi: false, ignoreCase: false is able to load many items 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "def",
    "id": 2,
    "name": "bbb",
  },
  {
    "code": "ghi",
    "id": 3,
    "name": "Aaa",
  },
]
`;

exports[`LoaderFactory multi: false, ignoreCase: false returns the first matching result 1`] = `
{
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`LoaderFactory multi: false, ignoreCase: true is able to load many items 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "def",
    "id": 2,
    "name": "bbb",
  },
]
`;

exports[`LoaderFactory multi: false, ignoreCase: true returns the first matching result 1`] = `
{
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`LoaderFactory multi: true, ignoreCase: false gets all matching results 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`LoaderFactory multi: true, ignoreCase: false is able to load many sets of items 1`] = `
[
  [
    {
      "code": "abc",
      "id": 1,
      "name": "aaa",
    },
    {
      "code": "abc",
      "id": 7,
      "name": "AAA",
    },
  ],
  [
    {
      "code": "def",
      "id": 2,
      "name": "bbb",
    },
    {
      "code": "def",
      "id": 8,
      "name": "BBB",
    },
  ],
]
`;

exports[`LoaderFactory multi: true, ignoreCase: true gets all matching results 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "ghi",
    "id": 3,
    "name": "Aaa",
  },
  {
    "code": "DEF",
    "id": 5,
    "name": "AAa",
  },
  {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`LoaderFactory multi: true, ignoreCase: true is able to load many sets of items 1`] = `
[
  [
    {
      "code": "abc",
      "id": 1,
      "name": "aaa",
    },
    {
      "code": "ghi",
      "id": 3,
      "name": "Aaa",
    },
    {
      "code": "DEF",
      "id": 5,
      "name": "AAa",
    },
    {
      "code": "abc",
      "id": 7,
      "name": "AAA",
    },
  ],
  [
    {
      "code": "def",
      "id": 2,
      "name": "bbb",
    },
    {
      "code": "ABC",
      "id": 4,
      "name": "Bbb",
    },
    {
      "code": "GHI",
      "id": 6,
      "name": "BBb",
    },
    {
      "code": "def",
      "id": 8,
      "name": "BBB",
    },
  ],
]
`;

exports[`LoaderFactory with no column type specified can accept options as the second parameter 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "ghi",
    "id": 3,
    "name": "Aaa",
  },
  {
    "code": "DEF",
    "id": 5,
    "name": "AAa",
  },
  {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;
